--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev:build": "webpack --mode=development --watch"
   },
   "lint-staged": {
-    "dev/**/*.{js,jsx,json,css,md}": ["eslint --fix ./dev/index.jsx", "git add"]
+    "dev/**/*.{js,jsx,json,css,md}": ["eslint --fix ./dev/index.jsx", "git add"],
+    "index.js/server/**/*.{js}": ["eslint --fix index.js/server/index.js", "git add"]
   },
   "dependencies": {
     "body-parser": "^1.18.3",
