--- a/package.json
+++ b/package.json
@@ -8,14 +8,11 @@
     "dev:build": "webpack --mode=development --watch"
   },
   "lint-staged": {
-    "dev/**/*.{js,jsx,json,css,md}": [
+    "./dev/**/*.{js,jsx,json,css,md}": [
       "eslint --fix ./dev/index.jsx",
       "git add"
     ],
-    "index.js": [
-      "eslint --fix ./index.js",
-      "git add"
-    ]
+    "index.js": ["eslint --fix index.js", "git add"]
   },
   "dependencies": {
     "body-parser": "^1.18.3",
