Add seed folder and file

--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
       "eslint --fix ./dev/index.jsx",
       "git add"
     ],
-    "index.js": ["eslint --fix index.js", "git add"]
+    "index.js": [
+      "eslint --fix index.js",
+      "git add"
+    ]
   },
   "dependencies": {
+    "algoliasearch": "^3.30.0",
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
