--- a/package.json
+++ b/package.json
@@ -34,14 +34,19 @@
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.7.0",
+    "css-loader": "^1.0.0",
     "eslint": "^5.6.1",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-inferno": "^7.10.0",
     "eslint-plugin-prettier": "^2.7.0",
     "husky": "^1.0.1",
     "lint-staged": "^7.3.0",
+    "mini-css-extract-plugin": "^0.4.3",
+    "node-sass": "^4.9.3",
     "nodemon": "^1.18.4",
     "prettier": "^1.14.3",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.0",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
   },
