--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-inferno": "^7.10.0",
     "eslint-plugin-prettier": "^2.7.0",
     "husky": "^1.0.1",
+    "inferno-devtools": "^5.6.1",
     "lint-staged": "^7.3.0",
     "mini-css-extract-plugin": "^0.4.3",
     "node-sass": "^4.9.3",
