Add change to eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,8 @@
         "propWrapperFunctions": [ "forbidExtraProps" ]
     },
     "extends": [
-        "plugin:prettier/recommended", 
+        "plugin:prettier/recommended",
+        "eslint:recommended", 
         "plugin:inferno/recommended"
     ],
     "parserOptions": {
