--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "babel-core": "6.26.3",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "7.1.4",
     "babel-plugin-inferno": "^5.1.0",
     "babel-plugin-transform-class-properties": "6.24.1",
@@ -35,6 +36,7 @@
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.7.0",
     "css-loader": "^1.0.0",
+    "dotenv-webpack": "^1.5.7",
     "eslint": "^5.6.1",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-inferno": "^7.10.0",
