--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "algoliasearch": "^3.30.0",
+    "autocomplete.js": "^0.31.0",
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
@@ -41,6 +42,7 @@
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-inferno": "^7.10.0",
     "eslint-plugin-prettier": "^2.7.0",
+    "file-loader": "^2.0.0",
     "husky": "^1.0.1",
     "inferno-devtools": "^5.6.1",
     "lint-staged": "^7.3.0",
