Add Redux and fix render bug
Appears bug might have been caused by trying
to access _highlightResult of every hit result
and render it as HTML. Will try to add
highlighting to project if there's time. Will
also be on lookout for more bugs that prevent
proper rendering or prevent app from running
normally.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,31 +13,16 @@
     },
     "extends": [
         "plugin:prettier/recommended",
-        "eslint:recommended", 
         "plugin:inferno/recommended"
     ],
     "parser": "babel-eslint",
     "rules": {
         "no-console": 0,
         "no-unused-vars": "warn",
-        "indent": [
-            "error",
-            2
-        ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
-        "quotes": [
-            "error",
-            "double"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ]
+        "prettier/prettier": "error"
     },
     "plugins": [
+      "prettier",
       "inferno"
     ]
 }
