--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "inferno": "^5.6.1",
-    "instantsearch.js": "^2.10.2",
-    "path": "^0.12.7"
+    "inferno-redux": "^5.6.1",
+    "path": "^0.12.7",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "babel-core": "6.26.3",
