--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
       "eslint --fix ./dev/index.jsx",
       "git add"
     ],
-    "index.js": [
-      "eslint --fix index.js",
+    "./dev/**/*.js": [
+      "eslint --fix ./server/index.js",
       "git add"
     ]
   },
@@ -28,11 +28,10 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "inferno": "^5.6.1",
-    "path": "^0.12.7",
-    "request-promise": "^4.2.2",
     "inferno-redux": "^5.6.1",
     "path": "^0.12.7",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "request-promise": "^4.2.2"
   },
   "devDependencies": {
     "babel-core": "6.26.3",
