--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "seed": "node seed/index.js",
     "start": "node index.js",
     "dev:start": "nodemon index.js",
-    "dev:build": "webpack --mode=development --watch"
+    "dev:build": "webpack --mode=development --watch",
+    "heroku:deploy": "git push heroku master"
   },
   "lint-staged": {
     "./dev/**/*.{js,jsx,json,css,md}": [
